--- a/index.html
+++ b/index.html
@@ -3,19 +3,28 @@
 <head>
 	<title>To do List</title>
 
-
-
 <body>
 	<div id="app">
 		<div class="container">
 			<h1>Todo List</h1>
 		</div>
-        <input type="text" v-model="todo">
-        <input type="submit" value="add" @click="storeTodo">
+
+        <div v-if="!isEditing">
+            <input type="text" v-model="todo">
+            <input type="submit" value="add" @click="storeTodo">
+        </div>
+
+        <div v-else>
+            <input type="text" v-model="todo">
+            <input type="submit" value="update" @click="updateTodo">
+        </div>
 
 		<ol>
-			<li v-for="todo in todos">
+			<li v-for="(todo, index) in todos">
 				{{ todo }}
+
+                <button @click="editTodo(index, todo)">Edit</button>
+                <button @click="deleteTodo(index)">Delete</button>
 			</li>
 			
 		</ol>
@@ -23,22 +32,38 @@
 
 	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
 
-
-
 	<script>
 		new Vue({
 			el: '#app',
 
 			data:{
-                todo:'',
-				todos: ['prepare breakfast','read a vuejs book']
+                isEditing: false,
+                selectedIndex: null,
+                todo: '',
+				todos: ['prepare breakfast', 'read a vuejs book']
 			},
 
             methods:{
                 storeTodo(){
                     this.todos.push(this.todo)
-                }
+                    this.todo = ''
+                },
 
+                editTodo(index, todo){
+                    this.todo = todo
+                    this.selectedIndex = index
+                    this.isEditing = true
+                },
+
+                updateTodo(){
+                    this.todos.splice(this.selectedIndex, 1, this.todo)
+                    this.todo = ''
+                    this.isEditing = false
+                },
+
+                deleteTodo(index){
+                    this.todos.splice(index,1)
+                }
             }
 		})
 	</script>
