--- a/index.html
+++ b/index.html
@@ -3,31 +3,43 @@
 <head>
 	<title>To do List</title>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
+    <style>
+        .container {
+            max-width: 960px;
+            margin: 0 auto;
+        }
+        h1 {
+            padding-top: 40px;
+        }
+    </style>
+
 <body>
 	<div id="app">
 		<div class="container">
 			<h1>Todo List</h1>
-		</div>
+		
+            <div v-if="!isEditing">
+                <input type="text" v-model="todo">
+                <input type="submit" value="add" @click="storeTodo" class="btn btn-success">
+            </div>
 
-        <div v-if="!isEditing">
-            <input type="text" v-model="todo">
-            <input type="submit" value="add" @click="storeTodo">
+            <div v-else>
+                <input type="text" v-model="todo">
+                <input type="submit" value="update" @click="updateTodo" class="btn btn-success">
+            </div>
+            <br>
+    		<ol>
+    			<li v-for="(todo, index) in todos">
+    				{{ todo }}
+
+                    <button @click="editTodo(index, todo)" class="btn btn-warning">Edit</button>
+                    <button @click="deleteTodo(index)" class="btn btn-danger">Delete</button>
+    			</li>
+    			
+    		</ol>
         </div>
-
-        <div v-else>
-            <input type="text" v-model="todo">
-            <input type="submit" value="update" @click="updateTodo">
-        </div>
-
-		<ol>
-			<li v-for="(todo, index) in todos">
-				{{ todo }}
-
-                <button @click="editTodo(index, todo)">Edit</button>
-                <button @click="deleteTodo(index)">Delete</button>
-			</li>
-			
-		</ol>
 	</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
